# realcode

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
docs/: AI_Dev_Platform_技术文档.md  architecture.md  engineering-improvement-tasks.md  test-analytics-design.md  上线准备清单.md
src/agents/: architect.py  backend.py  base.py  deployer.py  frontend.py  requirement.py  tester.py
src/llm/: provider.py
src/llm/prompts/: architect.py  backend.py  deployer.py  frontend.py  requirement.py  tester.py
src/orchestrator/: graph.py  state.py
src/sandbox/: executor.py
src/utils/: config.py  health.py  logger.py
src/web/: server.py
src/web/static/: index.html
tests/: conftest.py  test_base_agent.py  test_e2e_architect.py  test_e2e_backend.py  test_e2e_deployer.py  test_e2e_frontend.py  test_e2e_full_flow.py  test_e2e_requirement.py  test_e2e_tester.py  test_graph.py  test_llm_provider.py  test_sandbox.py  test_state.py
